<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/message_page"
        android:icon="@android:drawable/ic_menu_compass"
        android:iconTint="@color/purple_200"
        android:title="@string/message" />
    <item
        android:id="@+id/contact_page"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:iconTint="@color/purple_200"
        android:title="@string/contact" />
    <item
        android:id="@+id/discover_page"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:iconTint="@color/purple_200"
        android:title="@string/discover" />
    <item
        android:id="@+id/me_page"
        android:icon="@android:drawable/ic_menu_info_details"
        android:iconTint="@color/purple_200"
        android:title="@string/me" />
</menu>