<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="128dp">

        <ImageView
            android:id="@+id/iv_thumb"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/todo"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/username"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/iv_thumb"
            app:layout_constraintTop_toTopOf="@+id/iv_thumb" />

        <TextView
            android:id="@+id/tv_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/birthday"
            app:layout_constraintStart_toStartOf="@+id/tv_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_username" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/lv_my_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>